Refactor fetchData function and update button styling in index.html

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <option value="ASC">Ascending</option>
             <option value="DESC">Descending</option>
         </select>
-        <button onclick="fetchData()">Fetch and Download Data</button>
+        <button class="btn">Fetch and Download Data</button>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
